SONARJAVA-4967 FP in S4605 when basePackageClasses is used